RESOLVED FIXED54717
Fixed some math errors when when using variable-sized cells
https://bugs.webkit.org/show_bug.cgi?id=54717
Summary Fixed some math errors when when using variable-sized cells
Geoffrey Garen
Reported 2011-02-17 21:36:42 PST
Fixed some math errors when when using variable-sized cells
Attachments
Patch (4.51 KB, patch)
2011-02-17 21:40 PST, Geoffrey Garen
sam: review+
Geoffrey Garen
Comment 1 2011-02-17 21:40:27 PST
Sam Weinig
Comment 2 2011-02-17 21:42:48 PST
Comment on attachment 82916 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=82916&action=review > Source/JavaScriptCore/ChangeLog:262 > + Weird new line.
Geoffrey Garen
Comment 3 2011-02-17 21:49:47 PST
Note You need to log in before you can comment on or make changes to this bug.