Source/JavaScriptCore/runtime/MarkedBlock.h
@@ -85,6 +85,8 @@ namespace JSC {
 
         static const size_t atomSize = 64;
         static const size_t atomMask = ~(atomSize - 1); // atomSize must be a power of two.
+        
+        static const size_t atomsPerBlock = blockSize / atomSize;
 
         typedef char Atom[atomSize];
 
@@ -92,7 +94,7 @@ namespace JSC {
         Atom* atoms();
 
         size_t m_atomsPerCell;
-        size_t m_endAtom;
+        size_t m_endAtom; // This is a fuzzy end. Always test for < m_endAtom.
         WTF::Bitmap<blockSize / atomSize> m_marks;
         PageAllocationAligned m_allocation;
         Heap* m_heap;
@@ -181,7 +183,7 @@ namespace JSC {
 
     template <typename Functor> inline void MarkedBlock::forEach(Functor& functor)
     {
-        for (size_t i = firstAtom(); i != m_endAtom; i += m_atomsPerCell) {
+        for (size_t i = firstAtom(); i < m_endAtom; i += m_atomsPerCell) {
             if (!m_marks.get(i))
                 continue;
             functor(reinterpret_cast<JSCell*>(&atoms()[i]));
